refactor: use Classpath type in Argfile, add jvmOptions2, escape whitespace